# little-hell-example

./: .clang-format  .clang-tidy  .gitignore  Doxyfile  HACKING.md  README.md  TESTING.md  config.h  foo.lmp  meson.build  shell.nix
log/: log.c
opl/: opl.c
scripts/: clang-tidy.sh
src/: .gitignore  aes_prng.c  clang-format.sh  d_dedicated.c  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_mode.c  d_mode.h  deh_main.c  deh_str.c  i_endoom.c  i_glob.c  i_glob.h  i_input.c  i_joystick.c  i_main.c  i_musicpack.c  i_oplmusic.c  i_sdlmusic.c  i_sdlsound.c  i_sound.c  i_sound.h  i_system.c  i_system.h  i_timer.c  i_video.c  i_video.h  i_videohr.c  i_videohr.h  log.h  m_argv.c  m_argv.h  m_bbox.c  m_cheat.c  m_config.c  m_config.h  m_controls.c  m_fixed.c  (+40 more)
src/doom/: am_map.c  d_englsh.h  d_items.c  d_main.c  d_net.c  deh_misc.c  deh_misc.h  doom_icon.c  doomdef.c  doomstat.c  doomstat.h  dstrings.c  dstrings.h  f_finale.c  f_wipe.c  g_game.c  hu_lib.c  hu_lib.h  hu_stuff.c  info.c  info.h  m_menu.c  m_random.c  p_ceilng.c  p_doors.c  p_enemy.c  p_floor.c  p_inter.c  p_lights.c  p_map.c  p_maputl.c  p_mobj.c  p_plats.c  p_pspr.c  p_saveg.c  p_setup.c  p_sight.c  p_spec.c  p_switch.c  p_telept.c  (+18 more)
src/doom/hud/: statusbar.c  statusbar.h  widget.c  widget.h
src/engine/: d_loop.c  d_mode.h  doomtype.h  i_glob.c  i_main.c  i_sound.h  m_misc.c  midifile.h  mus2mid.c  net_client.c  net_packet.c  net_server.c  net_structrw.c  v_video.c  w_main.c
src/engine/graphics/: drawable.c  drawable.h  drawable_registry.c  drawable_registry.h  widget.c  widget.h
src/game/: README.md  am_map.c  d_dedicated.c  d_main.c  d_net.c  doom_icon.h  doomdef.c  doomdef.h  doomstat.h  dstrings.h  hu_lib.c  m_menu.c  meson.build  p_enemy.c  p_inter.c  p_local.h  p_mobj.c  p_setup.c  p_spec.c  p_user.c  r_draw.c  r_things.c  statdump.c
src/game/hud/: statusbar.c  widget.c
src/scripts/: clang-tidy.sh
src/server/: meson.build
src/subprojects/littlehell/: d_event.h  d_iwad.c  doomtype.h  i_main.c  i_sound.c  i_system.c  m_config.c  m_misc.h  meson.build  net_client.c  v_diskicon.c  v_video.c  w_file.c  w_file_posix.c  z_zone.h
src/subprojects/littlehell/libs/opl/: opl.c  opl_sdl.c
subprojects/little-hell-engine/: README.md  meson.build
subprojects/little-hell-engine/include/littlehell/: graphics.h  littlehell.h  meta.h  system.h
subprojects/little-hell-engine/src/: d_iwad.c  d_loop.c  i_glob.c  i_joystick.c  i_oplmusic.c  i_sdlsound.c  i_video.c  m_argv.c  m_config.c  m_fixed.c  m_misc.c  midifile.c  net_client.c  net_common.c  net_dedicated.c  net_gui.c  net_io.c  net_loop.c  net_query.c  net_sdl.c  net_server.c  net_structrw.c  v_video.c  w_checksum.c  w_main.c  w_wad.c  z_native.c
subprojects/little-hell-engine/src/audio/: midifile.c
subprojects/little-hell-engine/src/graphics/: drawable.c  drawable.h
subprojects/little-hell-engine/src/system/: doomtype.h  exit.c  system.c
